# Caffe_Utils

./: .gitignore  README.md
test_model/: test_caffe_model.py  test_model.py  visualize_model.py
train_model/: convert_data_lmdb.sh  create_sample_list.py  data_augment.py  debug.py  download_image_from_data_base.py  download_image_from_remoete.py  generate_samples_from_whole_image.py  get_data_from_database.sh  one_step_caffe_data_build.sh  prepare_data.sh  process_pointing_4_data.py  process_ucsd_crowd_density_data.py
train_model/caffe_classify/: CMakeLists.txt  Caffe_Detection.cpp  Caffe_Detection.hpp  main.cpp
